<?xml version="1.0" encoding="utf-8"?>
<!--
  Abstract :

  translatable strings for Stephe's Music Player.

  Copyright (C) 2011 Stephen Leake.  All Rights Reserved.

  This program is free software; you can redistribute it and/or
  modify it under terms of the GNU General Public License as
  published by the Free Software Foundation; either version 3, or
  (at your option) any later version. This program is distributed in
  the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  even the implied warranty of MERCHANTABILITY or FITNESS FOR A
  PARTICULAR PURPOSE. See the GNU General Public License for more
  details. You should have received a copy of the GNU General Public
  License distributed with this program; see file COPYING. If not,
  write to the Free Software Foundation, 51 Franklin Street, Suite
  500, Boston, MA 02110-1335, USA.
-->
<resources>
  <!-- translate -->

  <!-- misc -->
  <string name="app_name">Stephe\'s Music Player</string>
  <string name="dialog_playlist">Select a playlist</string>
  <string name="null_playlist">(click to select a playlist)</string>
  <string name="null_playlist_directory">(set playlist directory in preferences)</string>

  <!-- note buttons -->
  <string name="note_best_list">Best List</string>
  <string name="note_category">Category</string>
  <string name="note_dont_play">Don\'t Play</string>
  <string name="note_play_before">Play Before</string>
  <string name="note_other">Other</string>
  <string name="note_want_more">Want More</string>

  <!-- menu -->
  <string name="menu_quit">Quit</string>
  <string name="menu_share">Share</string>
  <string name="menu_liner">Liner notes</string>
  <string name="menu_copy">Copy</string>
  <string name="menu_reset_playlist">Reset Playlist</string>
  <string name="menu_preferences">Preferences</string>
  <string name="menu_dump_log">Dump Log</string>

  <!-- preference -->
  <string name="preferences_activity_name">&quot;Stephe's Music Player Preferences&quot;</string>

  <string name="playlist_directory_key">playlist_directory</string>
  <string name="playlist_directory_default">/storage/extSdCard/Audio</string>
  <string name="playlist_directory_title">playlist directory</string>
  <string name="playlist_directory_summary">absolute path where playlists are stored</string>
  <string name="playlist_directory_dialog_title">playlist directory</string>

  <string name="smm_directory_key">smm_directory</string>
  <string name="smm_directory_default">/storage/extSdCard/Android/data/org.stephen_leake.android.stephes_music/cache</string>
  <string name="smm_directory_title">smm directory</string>
  <string name="smm_directory_summary">absolute path where smm interface files are stored</string>
  <string name="smm_directory_dialog_title">smm directory</string>

  <string name="prev_threshold_key">prev_threshold</string>
  <string name="prev_threshold_default">5000</string>
  <string name="prev_threshold_title">previous threshold</string>
  <string name="prev_threshold_summary">threshold for previous song vs beginning of current song (milliseconds)</string>
  <string name="prev_threshold_dialog_title">previous threshold (milliseconds)</string>

  <string name="text_scale_key">text_scale</string>
  <string name="text_scale_default">0.8</string>
  <string name="text_scale_title">text scale</string>
  <string name="text_scale_summary">relative size of text</string>
  <string name="text_scale_dialog_title">set text scale</string>

  <string name="always_on_key">always_on</string>
  <string name="always_on_title">Always On</string>
  <string name="always_on_summary">keep screen on (to avoid screen savers on Google TV)</string>
  <string name="always_on_dialog_title">set always on</string>

  <!-- Do not translate, but may be locale-dependent. -->

  <!-- Duration format for duration < 1 hour -->
  <string translatable="false" name="durationformatshort">%M:%S</string>

  <!-- Duration format for duration >= 1 hour -->
  <string translatable="false" name="durationformatlong">%H:%M:%S</string>
  <string name="Ok">OK</string>

</resources>
