<?xml version="1.0" encoding="utf-8"?>
<!-- 
Abstract :

Preferences for Stephe's Music Player.
Copyright (C) 2011 Stephen Leake.  All Rights Reserved.

This program is free software; you can redistribute it and/or
modify it under terms of the GNU General Public License as
published by the Free Software Foundation; either version 3, or
(at your option) any later version. This program is distributed in
the hope that it will be useful, but WITHOUT ANY WARRANTY; without
even the implied warranty of MERCHANTABILITY or FITNESS FOR A
PARTICULAR PURPOSE. See the GNU General Public License for more
details. You should have received a copy of the GNU General Public
License distributed with this program; see file COPYING. If not,
write to the Free Software Foundation, 51 Franklin Street, Suite
500, Boston, MA 02110-1335, USA.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
      android:title="all">

    <ListPreference
        android:key="@string/playlist_directory_key"
        android:defaultValue="@string/playlist_directory_default"
        android:title="@string/playlist_directory_title"
        android:summary="@string/playlist_directory_summary"
        android:dialogTitle="@string/playlist_directory_dialog_title" />
    <!-- list entries filled at runtime -->

    <EditTextPreference
        android:key="@string/prev_threshold_key"
        android:defaultValue="@string/prev_threshold_default"
        android:numeric="integer"
        android:title="@string/prev_threshold_title"
        android:summary="@string/prev_threshold_summary"
        android:dialogTitle="@string/prev_threshold_dialog_title" />
        
    <EditTextPreference
        android:key="@string/text_scale_key"
        android:defaultValue="@string/text_scale_default"
        android:numeric="decimal"
        android:title="@string/text_scale_title"
        android:summary="@string/text_scale_summary"
        android:dialogTitle="@string/text_scale_dialog_title" />

    <CheckBoxPreference
        android:key="@string/always_on_key"
        android:defaultValue="false"
        android:title="@string/always_on_title"
        android:summary="@string/always_on_summary"
        android:dialogTitle="@string/always_on_dialog_title"/>
        
  </PreferenceCategory>
  
</PreferenceScreen>
